Add SQLite support (#193)
Wires SQLite (via xerial sqlite-jdbc + foundations-jdbc RC6) into typr as a
first-class dialect alongside PostgreSQL, MariaDB, DuckDB, Oracle, SQL Server,
and DB2.

## Why

SQLite is the most-deployed database on earth and an obvious target for an
embedded-DB code generator. Foundations RC6 now ships a full SqliteTypes
catalogue (integer affinities with concrete Java mappings, REAL/NUMERIC,
TEXT including VARCHAR(n)/CHAR(n), BLOB, date/time as ISO-8601 TEXT, UUID,
JSON) plus SqliteConfig with in-memory and file-backed modes, so the typr
work is to wire it through the codegen.

## Core wiring

- `typr-dsl`: Dialect.SQLITE (double-quote idents, IS / IS NOT null-safe
  equality, standard LIMIT/OFFSET, CAST() casts). Scala wrapper re-export.
- `db.SqliteType` ADT modelling every concrete type SqliteTypes exposes.
- `DbType.SQLite` + product/driver detection + TypoDataSource.hikariSqlite{,
  InMemory,File}; DatabaseKind.SQLITE branch in hikari().
- `SqliteAdapter` (codegen layers 1-5): supportsReturning=true, ON CONFLICT
  upserts, no native arrays, no schemas.
- `internal/sqlite/` package: metadata extraction via raw JDBC against
  sqlite_master + PRAGMA table_info / pragma_foreign_key_list /
  pragma_index_list; sqlglot bridge for .sql file analysis; type mapper that
  follows SQLite's affinity rules and matches the foundations SqliteTypes
  aliases (BIGINT, INT8, VARCHAR, CLOB, ...).

## Dispatch sites

Every per-DbType match got a SQLite arm: MetaDb, InstanceRequirements,
generate.scala (incl. PreciseConstraint cases for VarChar/Char/Decimal),
DbLibFoundations (folded into the SqlServer|DB2|SQLite no-arrays branch),
TypeMapperJvmNew (baseType + precise), TypeMatcher, TypeCompatibilityChecker,
ComputedTestInserts, SqlFileReader, TypeSuggester.

## CLI

ParsedBoundary/Source.Sqlite, convertSqliteBoundary, fetchSqliteBoundary,
generateSqliteForOutput. MetaDbFetch, ConnectionTest, LoadedSource, plus
the TUI screens (SchemaPicker, SourceForm, Sou